Added gogle oauth2 and gemini api

--- a/connection-graph/local.env.example
+++ b/connection-graph/local.env.example
@@ -8,3 +8,13 @@ SNOWFLAKE_DATABASE=CONNECTION_GRAPH
 
 # Set to "true" to enable Snowflake API
 NEXT_PUBLIC_USE_SNOWFLAKE=false
+
+# Gmail API OAuth Credentials
+# Create in Google Cloud Console > APIs & Services > Credentials > OAuth 2.0 Client IDs
+GOOGLE_CLIENT_ID=your_client_id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_client_secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/email/auth/callback
+
+# Gemini API Key
+# Get from Google AI Studio: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key
