--- a/connection-graph/package.json
+++ b/connection-graph/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
+    "@google/generative-ai": "^0.24.1",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
+    "googleapis": "^170.1.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
